--- a/build.properties
+++ b/build.properties
@@ -2,8 +2,8 @@
 
 highcharts.product.name=Highcharts
 highcharts.product.cdnpath=
-highcharts.product.version=2.2.5
-highcharts.product.date=2012-06-08
+highcharts.product.version=2.3Beta
+highcharts.product.date=2012-07-04
 
 highstock.product.name=Highstock
 highstock.product.cdnpath=/stock
