--- a/build.properties
+++ b/build.properties
@@ -2,10 +2,10 @@
 
 highcharts.product.name=Highcharts
 highcharts.product.cdnpath=
-highcharts.product.version=2.3Beta
-highcharts.product.date=2012-07-04
+highcharts.product.version=2.3.0
+highcharts.product.date=2012-08-24
 
 highstock.product.name=Highstock
 highstock.product.cdnpath=/stock
-highstock.product.version=1.1.6
-highstock.product.date=2012-06-08
+highstock.product.version=1.2.0
+highstock.product.date=2012-08-24
