Reorganized Point.applyOptions to generally allow extended series types with higher level dimensions like [low, high] or [open, high, low, close]. Started implementing box plot series type.

--- a/build.xml
+++ b/build.xml
@@ -166,6 +166,7 @@
             <file name="AreaSplineRangeSeries.js"/>
             <file name="ColumnRangeSeries.js"/>
             <file name="GaugeSeries.js"/>
+            <file name="BoxPlotSeries.js"/>
             <file name="Polar.js"/>
             <file name="Outro.js"/>
         </filelist>
