Final changes in ant build script to deploy files to Amazon S3

--- a/build.properties
+++ b/build.properties
@@ -9,3 +9,5 @@ highstock.product.name=Highstock
 highstock.product.cdnpath=/stock
 highstock.product.version=1.2.4
 highstock.product.date=2012-10-08
+
+amazon.s3.bucketname=s3://code.highcharts.com
