--- a/build.xml
+++ b/build.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- Highcharts build file -->
-<project name="build" default="Usage" xmlns:ac="antlib:net.sf.antcontrib">
+<project name="build" default="usage" xmlns:ac="antlib:net.sf.antcontrib">
   <!-- Describes the usage of the build file by invoking -projecthelp. -->
-  <target name="Usage">
+  <target name="usage">
     <java classname="org.apache.tools.ant.Main">
       <arg value="-projecthelp" />
       <arg value="-quiet" />
@@ -512,12 +512,8 @@
     <copy file="build/canvas-tools.js" todir="${dist.dir}/highstock/js/modules">
       <filterset refid="highstock.filter" />
     </copy>
-    <copy file="gfx/vml-radial-gradient.png" todir="${dist.dir}/highcharts/gfx">
-      <filterset refid="highcharts.filter" />
-    </copy>
-    <copy file="gfx/vml-radial-gradient.png" todir="${dist.dir}/highstock/gfx">
-      <filterset refid="highstock.filter" />
-    </copy>
+    <copy file="gfx/vml-radial-gradient.png" todir="${dist.dir}/highcharts/gfx" />
+    <copy file="gfx/vml-radial-gradient.png" todir="${dist.dir}/highstock/gfx" />
     <copy todir="${dist.dir}/highcharts/js/themes">
       <fileset dir="${themes.dir}" />
     </copy>
@@ -835,9 +831,7 @@
       </fileset>
     </ftp>
   </target>
-
   <!-- DEPLOY TO AMAZON S3 -->
-
   <!-- gzip javascript files in folder -->
   <target name="gzip-js" description="gzip all javascript versions for upload to Amazon S3" depends="set.properties">
     <property name="gzip.dir" value="${js.dir}/../js-gzip" />
@@ -859,7 +853,6 @@
       </sequential>
     </ac:for>
   </target>
-
   <target name="put-gzipped-files-to-S3">
     <!-- HINT:  to upload just the contents, specify the directory with a trailing slash, if you want to upload the whole directory specify the directory without trailing slash -->
     <!-- HINT: The sync command will compare checksums and sizes of the remote vs local files and only want to upload those that are new. When using skip-existing only file presence is check not! the content -->
@@ -878,7 +871,6 @@
       <arg value="--exclude=*" />
       <arg value="--include=${include.pattern}" />
       <arg value="--verbose" />
-      <arg value="--force" />
       <arg value="--no-preserve" />
       <!--arg value="-!-dry-run" /-->
       <arg value="put" />
@@ -888,7 +880,7 @@
   </target>
   <!-- synch all files to S3 recursively, but ommit .js files -->
   <target name="put-files-to-S3">
-    <echo message="synch local folder: ${local} with remote S3 path: ${remote} " />
+    <echo message="synch local folder: ${local} with remote S3 path: ${remote}" />
     <exec executable="s3cmd" failonerror="true">
       <arg value="--add-header=Cache-Control:public, max-age=${max.age}" />
       <arg value="--add-header=Expires:${http.expires}" />
@@ -896,6 +888,7 @@
       <arg value="--encoding=UTF-8" />
       <arg value="--recursive" />
       <arg value="--acl-public" />
+      <arg value="--no-preserve" />
       <arg value="--exclude=**/*.js" />
       <!--arg value="-!-dry-run" /-->
       <arg value="put" />
@@ -911,6 +904,7 @@
       <arg value="--guess-mime-type" />
       <arg value="--encoding=UTF-8" />
       <arg value="--acl-public" />
+      <arg value="--no-preserve" />
       <arg value="--exclude=*" />
       <arg value="--include=${include.pattern}" />
       <!--arg value="-!-dry-run" /-->
@@ -937,12 +931,13 @@
     <echo message="copying all files and folders other than .js" />
     <exec executable="s3cmd" failonerror="true">
       <!--arg value="-!-skip-existing" /-->
-       <arg value="--add-header=Cache-Control:public, max-age=${max.age}" />
+      <arg value="--add-header=Cache-Control:public, max-age=${max.age}" />
       <arg value="--add-header=Expires:${http.expires}" />
       <arg value="--guess-mime-type" />
       <arg value="--encoding=UTF-8" />
       <arg value="--recursive" />
       <arg value="--acl-public" />
+      <arg value="--no-preserve" />
       <arg value="--exclude=**/*.js" />
       <arg value="--exclude=*.js" />
       <arg value="--exclude=*.php" />
@@ -953,8 +948,7 @@
       <arg value="${remote}/" />
     </exec>
   </target>
-
-  <target name="deploy-highcharts-S3" depends="set.properties">
+  <target name="deploy-highcharts-S3" depends="set.properties" description="deploy highcharts distribution to Amazon S3">
     <copy file="${basedir}/build/dist/Highcharts-${highcharts.product.version}.zip" tofile="${basedir}/build/dist/Highcharts.zip" />
     <antcall target="put-zipfile-to-S3">
       <param name="local" value="${basedir}/build/dist/Highcharts.zip" />
@@ -973,7 +967,6 @@
             <ac:var name="path.var" value="@{val}" />
             <!-- this will be used later to do a remote copy on S3 -->
             <property name="copy.version" value="@{val}" />
-
             <!-- Copy zipped js/* to Root on S3 -->
             <antcall target="put-gzipped-files-to-S3">
               <param name="local" value="${basedir}/build/dist/highcharts/js-gzip/" />
@@ -1009,21 +1002,21 @@
             <length string="${path.var}" length="3" />
             <then>
               <ac:var name="path.var" value="${path.var}.@{val}" />
-               <!-- Copy to js/* version [= ${path.var} ] on S3 -->
-            <antcall target="put-gzipped-files-to-S3">
-              <param name="local" value="${basedir}/build/dist/highcharts/js-gzip/" />
-              <param name="remote" value="${amazon.s3.bucketname}/${path.var}" />
-              <param name="include.pattern" value="*.js" />
-              <param name="http.expires" value="${http.expires.one.month}" />
-              <param name="max.age" value="${max.age.one.month}" />
-            </antcall>
-            <!-- copy gfx folder to version folder on S3-->
-            <antcall target="put-files-to-S3">
-              <param name="local" value="${basedir}/build/dist/highcharts/gfx" />
-              <param name="remote" value="${amazon.s3.bucketname}/${path.var}" />
-              <param name="http.expires" value="${http.expires.one.month}" />
-              <param name="max.age" value="${max.age.one.month}" />
-            </antcall>
+              <!-- Copy to js/* version [= ${path.var} ] on S3 -->
+              <antcall target="put-gzipped-files-to-S3">
+                <param name="local" value="${basedir}/build/dist/highcharts/js-gzip/" />
+                <param name="remote" value="${amazon.s3.bucketname}/${path.var}" />
+                <param name="include.pattern" value="*.js" />
+                <param name="http.expires" value="${http.expires.one.month}" />
+                <param name="max.age" value="${max.age.one.month}" />
+              </antcall>
+              <!-- copy gfx folder to version folder on S3-->
+              <antcall target="put-files-to-S3">
+                <param name="local" value="${basedir}/build/dist/highcharts/gfx" />
+                <param name="remote" value="${amazon.s3.bucketname}/${path.var}" />
+                <param name="http.expires" value="${http.expires.one.month}" />
+                <param name="max.age" value="${max.age.one.month}" />
+              </antcall>
             </then>
           </elseif>
           <else>
@@ -1040,7 +1033,7 @@
     <delete dir="${basedir}/build/dist/highcharts/js-gzip" />
   </target>
   <!-- Deploy Highstock to S3 -->
-   <target name="deploy-highstock-S3" depends="set.properties">
+  <target name="deploy-highstock-S3" depends="set.properties" description="deploy highstock distribution to Amazon S3">
     <copy file="${basedir}/build/dist/Highstock-${highstock.product.version}.zip" tofile="${basedir}/build/dist/Highstock.zip" />
     <antcall target="put-zipfile-to-S3">
       <param name="local" value="${basedir}/build/dist/Highstock.zip" />
@@ -1059,7 +1052,6 @@
             <ac:var name="path.var" value="@{val}" />
             <!-- this will be used later to do a remote copy on S3 -->
             <property name="copy.version" value="@{val}" />
-
             <!-- Copy zipped js/* to Root on S3 -->
             <antcall target="put-gzipped-files-to-S3">
               <param name="local" value="${basedir}/build/dist/highstock/js-gzip/" />
@@ -1095,21 +1087,21 @@
             <length string="${path.var}" length="3" />
             <then>
               <ac:var name="path.var" value="${path.var}.@{val}" />
-               <!-- Copy to js/* version [= ${path.var} ] on S3 -->
-            <antcall target="put-gzipped-files-to-S3">
-              <param name="local" value="${basedir}/build/dist/highstock/js-gzip/" />
-              <param name="remote" value="${amazon.s3.bucketname}/stock/${path.var}" />
-              <param name="include.pattern" value="*.js" />
-              <param name="http.expires" value="${http.expires.one.month}" />
-              <param name="max.age" value="${max.age.one.month}" />
-            </antcall>
-            <!-- copy gfx folder to version folder on S3-->
-            <antcall target="put-files-to-S3">
-              <param name="local" value="${basedir}/build/dist/highstock/gfx" />
-              <param name="remote" value="${amazon.s3.bucketname}/stock/${path.var}" />
-              <param name="http.expires" value="${http.expires.one.month}" />
-              <param name="max.age" value="${max.age.one.month}" />
-            </antcall>
+              <!-- Copy to js/* version [= ${path.var} ] on S3 -->
+              <antcall target="put-gzipped-files-to-S3">
+                <param name="local" value="${basedir}/build/dist/highstock/js-gzip/" />
+                <param name="remote" value="${amazon.s3.bucketname}/stock/${path.var}" />
+                <param name="include.pattern" value="*.js" />
+                <param name="http.expires" value="${http.expires.one.month}" />
+                <param name="max.age" value="${max.age.one.month}" />
+              </antcall>
+              <!-- copy gfx folder to version folder on S3-->
+              <antcall target="put-files-to-S3">
+                <param name="local" value="${basedir}/build/dist/highstock/gfx" />
+                <param name="remote" value="${amazon.s3.bucketname}/stock/${path.var}" />
+                <param name="http.expires" value="${http.expires.one.month}" />
+                <param name="max.age" value="${max.age.one.month}" />
+              </antcall>
             </then>
           </elseif>
           <else>
@@ -1125,7 +1117,6 @@
     </ac:for>
     <delete dir="${basedir}/build/dist/highstock/js-gzip" />
   </target>
-
   <!-- push whole versions structure from local machine to Amazon S3 -->
   <target name="push-all-versions-to-S3" depends="set.properties">
     <!-- copy base folder containing all versions to seperate folder for gzipping *.js files. The user is asked om source directory containing all versions -->
