Added error bar series type

--- a/build.xml
+++ b/build.xml
@@ -182,6 +182,7 @@
             <file name="ColumnRangeSeries.js"/>
             <file name="GaugeSeries.js"/>
             <file name="BoxPlotSeries.js"/>
+            <file name="ErrorBarSeries.js"/>
             <file name="BubbleSeries.js"/>
             <file name="Polar.js"/>
             <file name="Outro.js"/>
