Better fix for #1397. Now only one tick is visible for single points.

--- a/js/.htaccess
+++ b/js/.htaccess
@@ -10,4 +10,5 @@ RewriteRule highcharts-more.js debug.php?target=highchartsmore
 RewriteRule ^stock/(.*?) /$1
 
 # Source files
-RewriteRule (.*?)exporting.js $1exporting.src.js
+RewriteRule (.*?)\.src.js $1.js
+RewriteRule (.*?)\.js $1.src.js
