--- a/js/.htaccess
+++ b/js/.htaccess
@@ -2,9 +2,9 @@
 RewriteEngine On
 
 # Files concatenated from parts
-RewriteRule highcharts.js debug.php?target=highcharts
-RewriteRule highstock.js debug.php?target=highstock
-RewriteRule highcharts-more.js debug.php?target=highchartsmore
+RewriteRule highcharts.js debug.php?target=highcharts [L]
+RewriteRule highstock.js debug.php?target=highstock [L]
+RewriteRule highcharts-more.js debug.php?target=highchartsmore [L]
 
 # Stock directory
 RewriteRule ^stock/(.*?) /$1
