--- a/test/unit/jsTestDriver.conf
+++ b/test/unit/jsTestDriver.conf
@@ -15,8 +15,15 @@ load:
   - js/parts/Color.js
   - js/parts/SvgRenderer.js
   - js/parts/VmlRenderer.js
-  - js/parts/Chart.js
+  - js/parts/CanVGRenderer.js
+  - js/parts/Tick.js
+  - js/parts/PlotLineOrBand.js
+  - js/parts/StackItem.js
+  - js/parts/Axis.js
   - js/parts/Tooltip.js
+  - js/parts/MouseTracker.js
+  - js/parts/Legend.js
+  - js/parts/Chart.js
   - js/parts/Series.js
   - js/parts/LineSeries.js
   - js/parts/AreaSeries.js
@@ -27,6 +34,7 @@ load:
   - js/parts/ScatterSeries.js
   - js/parts/PieSeries.js
   - js/parts/DataGrouping.js
+  - js/parts/Facade.js
 
 # tests
   - test/unit/ColorTest.js
@@ -35,3 +43,4 @@ load:
   - test/unit/TooltipTest.js
   - test/unit/AdaptersTest.js
   - test/unit/RendererTest.js
+  - test/unit/AxisTest.js
