--- a/test/gc/jsTestDriver.conf
+++ b/test/gc/jsTestDriver.conf
@@ -21,7 +21,7 @@ load:
   - js/parts/StackItem.js
   - js/parts/Axis.js
   - js/parts/Tooltip.js
-  - js/parts/MouseTracker.js
+  - js/parts/Pointer.js
   - js/parts/Legend.js
   - js/parts/Chart.js
   - js/parts/Series.js
