--- a/js/.htaccess
+++ b/js/.htaccess
@@ -11,3 +11,4 @@ RewriteRule ^stock/(.*?) /$1
 
 # Source files
 RewriteRule (.*?)exporting.js $1exporting.src.js
+RewriteRule (.*?)data.js $1data.src.js
