--- a/build.properties
+++ b/build.properties
@@ -2,10 +2,10 @@
 
 highcharts.product.name=Highcharts
 highcharts.product.cdnpath=
-highcharts.product.version=2.3.5
-highcharts.product.date=2012-12-19
+highcharts.product.version=3.0Beta
+highcharts.product.date=2013-02-21
 
 highstock.product.name=Highstock
 highstock.product.cdnpath=/stock
-highstock.product.version=1.2.5
-highstock.product.date=2012-12-19
+highstock.product.version=1.3Beta
+highstock.product.date=2013-02-21
