Fixed regressions for Highstock v1.3. Refined sample viewer.

--- a/build.xml
+++ b/build.xml
@@ -136,6 +136,7 @@
             <file name="Globals.js"/>
             <file name="Utilities.js"/>
             <file name="PathAnimation.js"/>
+            <file name="JQueryAdapter.js"/>
             <file name="Adapters.js"/>
             <file name="Options.js"/>
             <file name="Color.js"/>
