--- a/build.xml
+++ b/build.xml
@@ -51,14 +51,17 @@
         <property name="prototype.src.name" value="prototype-adapter.src.js"/>
         <property name="exporting.src.name" value="exporting.src.js"/>
         <property name="data.src.name" value="data.src.js"/>
+        <property name="funnel.src.name" value="funnel.src.js"/>
         <property name="mootools.minified.name" value="mootools-adapter.js"/>
         <property name="prototype.minified.name" value="prototype-adapter.js"/>
         <property name="exporting.minified.name" value="exporting.js"/>
         <property name="data.minified.name" value="data.js"/>
+        <property name="funnel.minified.name" value="funnel.js"/>
         <property name="mootools.src.file" value="${basedir}/js/adapters/${mootools.src.name}"/>
         <property name="prototype.src.file" value="${basedir}/js/adapters/${prototype.src.name}"/>
         <property name="exporting.src.file" value="${basedir}/js/modules/${exporting.src.name}"/>
         <property name="data.src.file" value="${basedir}/js/modules/${data.src.name}"/>
+        <property name="funnel.src.file" value="${basedir}/js/modules/${funnel.src.name}"/>
 
         <!-- jsLint -->
         <property name="jslint4java.dir" value="${tools.dir}/jslint4java"/>
@@ -279,9 +282,9 @@
             <fileset file="${prototype.src.file}"/>
             <fileset file="${exporting.src.file}"/>
             <fileset file="${data.src.file}"/>
+            <fileset file="${funnel.src.file}"/>
             <fileset dir="${themes.dir}"/>
             <fileset file="js/modules/canvgrenderer-extended.src.js"/>
-            <fileset file="js/modules/funnel.src.js"/>
         </jslint>
         
 
@@ -405,6 +408,10 @@
             <param name="param.out" value="${dist.dir}/js/modules/${data.minified.name}"/>
         </antcall>
         <antcall target="compile">
+            <param name="param.src" value="${funnel.src.file}"/>
+            <param name="param.out" value="${dist.dir}/js/modules/${funnel.minified.name}"/>
+        </antcall>
+        <antcall target="compile">
             <param name="param.src" value="build/canvas-tools.src.js"/>
             <param name="param.out" value="build/canvas-tools.js"/>
         </antcall>
@@ -512,6 +519,11 @@
         <copy file="${dist.dir}/js/modules/${data.minified.name}" todir="${dist.dir}/highcharts/js/modules"><filterset refid="highcharts.filter"/></copy>
         <copy file="${data.src.file}" todir="${dist.dir}/highstock/js/modules"><filterset refid="highstock.filter"/></copy>
         <copy file="${dist.dir}/js/modules/${data.minified.name}" todir="${dist.dir}/highstock/js/modules"><filterset refid="highstock.filter"/></copy>
+
+        <copy file="${funnel.src.file}" todir="${dist.dir}/highcharts/js/modules"><filterset refid="highcharts.filter"/></copy>
+        <copy file="${dist.dir}/js/modules/${funnel.minified.name}" todir="${dist.dir}/highcharts/js/modules"><filterset refid="highcharts.filter"/></copy>
+        <copy file="${funnel.src.file}" todir="${dist.dir}/highstock/js/modules"><filterset refid="highstock.filter"/></copy>
+        <copy file="${dist.dir}/js/modules/${funnel.minified.name}" todir="${dist.dir}/highstock/js/modules"><filterset refid="highstock.filter"/></copy>
 
         <copy file="build/canvas-tools.src.js" todir="${dist.dir}/highcharts/js/modules"><filterset refid="highcharts.filter"/></copy>
         <copy file="build/canvas-tools.js" todir="${dist.dir}/highcharts/js/modules"><filterset refid="highcharts.filter"/></copy>
