--- a/build.xml
+++ b/build.xml
@@ -286,7 +286,7 @@
             <fileset dir="${themes.dir}"/>
             <fileset file="js/modules/canvgrenderer-extended.src.js"/>
         </jslint>
-        
+
 
         <!-- Set a property that tells if there are unused variables. -->
         <condition property="lint.variable.error">
@@ -301,7 +301,7 @@
     <target name="lint" depends="do-lint" if="lint.variable.error">
         <echo message="Warning: undefined or unused variables exist. Run 'start build/lintreport.html'."/>
     </target>
-    
+
     <!-- Runs jslint on parts in order to make it easier to find the error by file and line number. -->
     <target name="do-lint-parts" depends="set.properties">
         <jslint haltOnFailure="false" options="sloppy, forin, confusion, plusplus, nomen, vars, regexp, newcap, browser, undef, continue">
@@ -530,8 +530,8 @@
         <copy file="build/canvas-tools.src.js" todir="${dist.dir}/highstock/js/modules"><filterset refid="highstock.filter"/></copy>
         <copy file="build/canvas-tools.js" todir="${dist.dir}/highstock/js/modules"><filterset refid="highstock.filter"/></copy>
 
-		<copy file="gfx/vml-radial-gradient.png" todir="${dist.dir}/highcharts/gfx"><filterset refid="highcharts.filter"/></copy>
-		<copy file="gfx/vml-radial-gradient.png" todir="${dist.dir}/highstock/gfx"><filterset refid="highstock.filter"/></copy>
+		<copy file="gfx/vml-radial-gradient.png" todir="${dist.dir}/highcharts/gfx"></copy>
+		<copy file="gfx/vml-radial-gradient.png" todir="${dist.dir}/highstock/gfx"></copy>
 
         <copy todir="${dist.dir}/highcharts/js/themes">
             <fileset dir="${themes.dir}"/>
@@ -801,7 +801,7 @@
             <arg value="${file}"/>
         </exec>
     </target>
-    
+
     <!-- Uploads the generated files to the downloadable zip and to code.highcharts.com -->
     <target name="deploy-highcharts">
         <property file="git-ignore-me.properties"/>
@@ -836,7 +836,7 @@
             </fileset>
         </ftp>
     </target>
-    
+
     <!-- Uploads the generated files to the downloadable zip and to code.highcharts.com -->
     <target name="deploy-highstock">
         <property file="git-ignore-me.properties"/>
@@ -871,7 +871,7 @@
             </fileset>
         </ftp>
     </target>
-    
+
     <!-- DEPLOY TO AMAZON S3 -->
     <!-- gzip javascript files in folder -->
     <target name="gzip-js" description="gzip all javascript versions for upload to Amazon S3" depends="set.properties">
@@ -896,7 +896,7 @@
     </target>
     <target name="put-gzipped-files-to-S3">
         <!-- HINT:    to upload just the contents, specify the directory with a trailing slash, if you want to upload the whole directory specify the directory without trailing slash -->
-        <!-- HINT: The sync command will compare checksums and sizes of the remote vs local files and only want to upload those that are new. When using skip-existing only file presence is check not! the content -->
+        <!-- HINT: The sync command will compare checksums and sizes of the remote vs local files and only want to upload those that are new. When using skip-existing only file presence is checked, NOT the content -->
         <echo message="synch local folder: ${local} with remote S3 path: ${remote}"/>
         <!-- Upload the .js files to remote S3 version folder -->
         <exec executable="s3cmd" failonerror="true">
@@ -909,8 +909,6 @@
             <arg value="--encoding=UTF-8"/>
             <arg value="--recursive"/>
             <arg value="--acl-public"/>
-            <arg value="--exclude=*"/>
-            <arg value="--include=${include.pattern}"/>
             <arg value="--verbose"/>
             <arg value="--no-preserve"/>
             <!--arg value="-!-dry-run" /-->
@@ -1007,32 +1005,30 @@
                     <length string="${path.var}" length="0"/>
                     <then>
                         <ac:var name="path.var" value="@{val}"/>
-                        <!-- this will be used later to do a remote copy on S3 -->
+                        <!-- copy.version will be used later on, to do a remote copy on S3 -->
                         <property name="copy.version" value="@{val}"/>
-                        <!-- Copy zipped js/* to Root on S3 -->
+                        <!-- STEP 1: Copy zipped js/* to ROOT on S3 -->
                         <antcall target="put-gzipped-files-to-S3">
                             <param name="local" value="${basedir}/build/dist/highcharts/js-gzip/"/>
                             <param name="remote" value="${amazon.s3.bucketname}"/>
-                            <param name="include.pattern" value="*.js"/>
                             <param name="http.expires" value="${http.expires.one.day}"/>
                             <param name="max.age" value="${max.age.one.day}"/>
                         </antcall>
-                        <!-- copy gfx folder to Root -->
+                        <!-- STEP 2: copy gfx folder to ROOT -->
                         <antcall target="put-files-to-S3">
                             <param name="local" value="${basedir}/build/dist/highcharts/gfx"/>
                             <param name="remote" value="${amazon.s3.bucketname}"/>
                             <param name="http.expires" value="${http.expires.one.day}"/>
                             <param name="max.age" value="${max.age.one.day}"/>
                         </antcall>
-                        <!-- Copy to js/* version [= ${path.var} ] on S3 -->
+                        <!-- STEP 3: Copy to js/* version [= ${path.var} ] on S3 -->
                         <antcall target="put-gzipped-files-to-S3">
                             <param name="local" value="${basedir}/build/dist/highcharts/js-gzip/"/>
                             <param name="remote" value="${amazon.s3.bucketname}/${path.var}"/>
-                            <param name="include.pattern" value="*.js"/>
                             <param name="http.expires" value="${http.expires.one.day}"/>
                             <param name="max.age" value="${max.age.one.day}"/>
                         </antcall>
-                        <!-- copy gfx folder to version folder on S3-->
+                        <!-- STEP 4: copy gfx folder to version folder on S3-->
                         <antcall target="put-files-to-S3">
                             <param name="local" value="${basedir}/build/dist/highcharts/gfx"/>
                             <param name="remote" value="${amazon.s3.bucketname}/${path.var}"/>
@@ -1041,18 +1037,18 @@
                         </antcall>
                     </then>
                     <elseif>
+                        <!-- UPLOAD TO S3 FOR A FOLDER WITH 3 DIGITS, for example 2.0.0 -->
                         <length string="${path.var}" length="3"/>
                         <then>
                             <ac:var name="path.var" value="${path.var}.@{val}"/>
-                            <!-- Copy to js/* version [= ${path.var} ] on S3 -->
+                            <!-- STEP 1: Copy to js/* version [= ${path.var} ] on S3 -->
                             <antcall target="put-gzipped-files-to-S3">
                                 <param name="local" value="${basedir}/build/dist/highcharts/js-gzip/"/>
                                 <param name="remote" value="${amazon.s3.bucketname}/${path.var}"/>
-                                <param name="include.pattern" value="*.js"/>
                                 <param name="http.expires" value="${http.expires.one.month}"/>
                                 <param name="max.age" value="${max.age.one.month}"/>
                             </antcall>
-                            <!-- copy gfx folder to version folder on S3-->
+                            <!-- STEP 2: copy gfx folder to version folder on S3-->
                             <antcall target="put-files-to-S3">
                                 <param name="local" value="${basedir}/build/dist/highcharts/gfx"/>
                                 <param name="remote" value="${amazon.s3.bucketname}/${path.var}"/>
@@ -1063,6 +1059,7 @@
                     </elseif>
                     <else>
                         <!-- concatenate version name and assign to path.var-->
+                        <!-- COPY FOLDER ON S3, for example, 2 to 2.1 -->
                         <ac:var name="path.var" value="${path.var}.@{val}"/>
                         <antcall target="copy-folder-on-S3">
                             <param name="from.s3" value="${amazon.s3.bucketname}/${copy.version}/"/>
@@ -1074,7 +1071,7 @@
         </ac:for>
         <!-- delete dir="${basedir}/build/dist/highcharts/js-gzip"/ -->
     </target>
-    
+
     <!-- Deploy Highstock to S3 -->
     <target name="deploy-highstock-S3" depends="set.properties" description="deploy highstock distribution to Amazon S3">
         <property file="git-ignore-me.properties"/>
@@ -1100,7 +1097,6 @@
                         <antcall target="put-gzipped-files-to-S3">
                             <param name="local" value="${basedir}/build/dist/highstock/js-gzip/"/>
                             <param name="remote" value="${amazon.s3.bucketname}/stock"/>
-                            <param name="include.pattern" value="*.js"/>
                             <param name="http.expires" value="${http.expires.one.day}"/>
                             <param name="max.age" value="${max.age.one.day}"/>
                         </antcall>
@@ -1115,7 +1111,6 @@
                         <antcall target="put-gzipped-files-to-S3">
                             <param name="local" value="${basedir}/build/dist/highstock/js-gzip/"/>
                             <param name="remote" value="${amazon.s3.bucketname}/stock/${path.var}"/>
-                            <param name="include.pattern" value="*.js"/>
                             <param name="http.expires" value="${http.expires.one.day}"/>
                             <param name="max.age" value="${max.age.one.day}"/>
                         </antcall>
@@ -1135,7 +1130,6 @@
                             <antcall target="put-gzipped-files-to-S3">
                                 <param name="local" value="${basedir}/build/dist/highstock/js-gzip/"/>
                                 <param name="remote" value="${amazon.s3.bucketname}/stock/${path.var}"/>
-                                <param name="include.pattern" value="*.js"/>
                                 <param name="http.expires" value="${http.expires.one.month}"/>
                                 <param name="max.age" value="${max.age.one.month}"/>
                             </antcall>
@@ -1161,7 +1155,7 @@
         </ac:for>
         <!-- delete dir="${basedir}/build/dist/highstock/js-gzip"/ -->
     </target>
-    
+
     <!-- push whole versions structure from local machine to Amazon S3 -->
     <target name="push-all-versions-to-S3" depends="set.properties">
         <property file="git-ignore-me.properties"/>
@@ -1176,7 +1170,6 @@
             <param name="remote" value="${amazon.s3.bucketname}"/>
             <param name="http.expires" value="${http.expires.one.month}"/>
             <param name="max.age" value="${max.age.one.month}"/>
-            <param name="include.pattern" value="*.js"/>
         </antcall>
         <!-- synch files and folders containing non-gzipped content -->
         <antcall target="put-all-versions-nonjs-files-to-S3">
