--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,6 @@
 /.pydevproject
 /highcharts.com.sublime-project
 /highcharts.com.sublime-workspace
+/highcharts.sublime-workspace
+/highcharts.com
+*sublime*
