--- a/exporting-server/java/highcharts-export/src/main/resources/log4j.properties
+++ b/exporting-server/java/highcharts-export/src/main/resources/log4j.properties
@@ -1,8 +1,20 @@
-# Direct log messages to stdout
-log4j.appender.stdout=org.apache.log4j.ConsoleAppender
-log4j.appender.stdout.Target=System.out
-log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern=%d{ABSOLUTE} %5p %c{1}:%L - %m%n
+#Console Appender
+log4j.appender.console=org.apache.log4j.ConsoleAppender
+log4j.appender.console.layout=org.apache.log4j.PatternLayout
+log4j.appender.console.layout.ConversionPattern=[%5p] [%t %d{hh:mm:ss}] (%F:%M:%L) %m%n
 
-# Root logger option
-log4j.rootLogger=ERROR, stdout
+log4j.appender.R=org.apache.log4j.RollingFileAppender
+log4j.appender.R.File=${catalina.base}/logs/export-server.log
+log4j.appender.R.MaxFileSize=1000KB
+log4j.appender.R.MaxBackupIndex=10
+log4j.appender.R.layout=org.apache.log4j.PatternLayout
+log4j.appender.R.layout.ConversionPattern=[%5p] [%t %d{hh:mm:ss}] (%F:%M:%L) %m%n
+
+# Debug specific class
+#log4j.logger.services=DEBUG, stdout
+#log4j.logger.converter=DEBUG
+#log4j.logger.exporter=DEBUG
+#log4j.logger.pool=DEBUG
+
+log4j.rootLogger=ERROR,console,R
+#log4j.rootLogger=ERROR,console
