Updated readme files for exporting server

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,5 @@
 /highcharts.sublime-workspace
 /highcharts.com
 *sublime*
+/exporting-server/java/highcharts-export/src/main/resources/presets/
+/exporting-server/java/highcharts-export/src/main/webapp/META-INF/
